--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 mlua = { version = "0.10.2", features = ["lua53", "vendored"] }
+
+[profile.release]
+lto = true
+strip = true
+panic = "abort"
