--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
 
 [dependencies]
-mlua = { version = "0.10.2", features = ["lua53", "vendored"] }
+mlua = { version = "0.10.3", features = ["lua53", "vendored"] }
+egui = "0.31.1"
+sdl2 = { version = "0.37.0", features = ["bundled", "static-link"]}
+gl = { version = "0.14.0" }
+egui_sdl2_gl = "0.31.0"
 
 [profile.release]
 lto = false
