--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 mlua = { version = "0.10.3", features = ["lua53", "vendored"] }
+anyhow = "1.0.97"
+json = "0.12.4"
 
 [profile.release]
 lto = false
