--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,20 @@ crate-type = ["cdylib"]
 
 [dependencies]
 mlua = { version = "0.10.3", features = ["lua53", "vendored"] }
+retour = { version = "0.3.1", features = ["static-detour"] }
 byteorder = "1.5.0"
 anyhow = "1.0.97"
 json = "0.12.4"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 pdb = "0.8.0"
+winapi = "0.3.9"
 
 # Linux 平台特定依赖项
 [target.'cfg(target_os = "linux")'.dependencies]
+cpp_demangle = "0.4.4"
 goblin = "0.9.3"
+libc = "0.2.171"
 
 [profile.release]
 lto = false
