--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ mlua = { version = "0.10.3", features = ["lua53", "vendored"] }
 retour = { version = "0.3.1", features = ["static-detour"] }
 byteorder = "1.5.0"
 anyhow = "1.0.97"
+tklog = "0.2.9"
 json = "0.12.4"
 
 [target.'cfg(target_os = "windows")'.dependencies]
