--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ crate-type = ["cdylib"]
 
 [dependencies]
 sdl2-sys = { version = "0.37.0", features = ["static-link", "bundled"] }
-mlua = { version = "0.10.3", features = ["lua53", "vendored"] }
-retour = { version = "0.4.0-alpha.3", features = ["static-detour"] }
+mlua = { version = "0.10.5", features = ["lua53", "vendored"] }
+retour = { version = "0.3.1", features = ["static-detour"] }
 egui_glow = "0.31.1"
 byteorder = "1.5.0"
-anyhow = "1.0.97"
-libffi = "4.0.0"
+anyhow = "1.0.98"
+libffi = "4.1.0"
 tklog = "0.2.9"
 egui = "0.31.1"
 glow = "0.16.0"
